<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/f_imagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo">

    </ImageView>

    <TextView
        android:id="@+id/f_label_pregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/f_pregunta">

    </TextView>

    <TextView
        android:id="@+id/f_pregunta_r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>

    <TextView
        android:id="@+id/f_label_categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/f_categoria">

    </TextView>

    <TextView
        android:id="@+id/f_categoria_r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>

    <TextView
        android:id="@+id/f_label_dificultad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/f_dificultad">

    </TextView>

    <TextView
        android:id="@+id/f_dificultad_r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>

    <RadioGroup
        android:id="@+id/f_radio_grupo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/f_primero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/f_verdadero">

        </RadioButton>
        <RadioButton
            android:id="@+id/f_segundo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/f_falso">

        </RadioButton>
    </RadioGroup>

    <Button
        android:id="@+id/f_boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/f_boton">
    </Button>
</LinearLayout>